<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper" >

    <ImageView
        android:id="@+id/imageViewCorpoDispari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/main_titolo" />

    <TextView
        android:id="@+id/textViewAutore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/info_autore"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewTitoloAutore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewAutore"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/info_titolo_autore"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewDescrizioneRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAutore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:gravity="center"
        android:text="@string/info_rating_descrizione"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/buttonRatingGooglePlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDescrizioneRating"
        android:layout_centerHorizontal="true"
        android:background="@drawable/riquadro_verde"
        android:padding="8dp"
        android:text="@string/info_rating_bottone" />

</RelativeLayout>
