<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/wallpaper" >

    <TextView
        android:id="@+id/textViewMultiplayerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/cornice_bianca_info"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="@string/multiplayer_info"
        android:textSize="@dimen/grandezza_testo3"
        android:maxLines = "8"
		android:scrollbars = "vertical" />

    <Button
        android:id="@+id/buttonClient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonServer"
        android:layout_below="@+id/textViewMultiplayerInfo"
        android:layout_marginTop="44dp"
        android:background="@drawable/riquadro_verde"
        android:onClick="clientClicked"
        android:text="@string/client"
        android:textSize="@dimen/grandezza_testo2" />

    <Button
        android:id="@+id/buttonServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonClient"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="@drawable/riquadro_rosso"
        android:onClick="serverClicked"
        android:text="@string/server"
        android:textSize="@dimen/grandezza_testo2" />

</RelativeLayout>
