<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/wallpaper"
    tools:context=".GameActivity$DummySectionFragment" >

    <Button
        android:id="@+id/buttonGioca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonMultiplayer"
        android:layout_alignLeft="@+id/buttonMultiplayer"
        android:layout_marginBottom="13dp"
        android:background="@drawable/riquadro_verde"
        android:text="@string/gioca"
        android:textSize="@dimen/grandezza_testo2" />

    <Button
        android:id="@+id/buttonMultiplayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLabirinti"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:background="@drawable/riquadro_rosso"
        android:text="@string/multiplayer"
        android:textSize="@dimen/grandezza_testo2" />

    <Button
        android:id="@+id/buttonLabirinti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/riquadro_giallo"
        android:text="@string/labirinti"
        android:textSize="@dimen/grandezza_testo2" />
    
    <!-- sign-in button -->
	<com.google.android.gms.common.SignInButton
	    android:id="@+id/sign_in_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
	
	<!-- sign-out button -->
	<Button
	    android:id="@+id/sign_out_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
	    android:text="Sign Out" 
	    android:visibility="gone" />

    <ImageView
        android:id="@+id/imageViewMultiplayerImpostazioniCorpoDispari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/main_titolo" />

    <ImageView
        android:id="@+id/imageViewCorpoDispari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonGioca"
        android:layout_below="@+id/imageViewMultiplayerImpostazioniCorpoDispari"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/main_immagine" />

    <Button
        android:id="@+id/buttonOpzioni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/opzioni"
        android:textSize="@dimen/grandezza_testo2" />

    <Button
        android:id="@+id/buttonInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/info" />
    
    <Button
        android:id="@+id/buttonClassifica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonInfo"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/classifica" />

</RelativeLayout>
